# alloc-collections

./: Cargo.toml
src/: alloc.rs  boxes.rs  deque.rs  fixed_vec.rs  layout_ext.rs  lib.rs  raw_vec.rs  unique.rs  vec.rs
src/deque/: iter.rs
src/indexmap/: macros.rs  map.rs  mod.rs
src/vec/: macros.rs
