[package]
name = "alloc-collections"
version = "0.2.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"
description = "Collections with custom allocator support"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
