[package]
name = "alloc-collections"
version = "0.3.1"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"
description = "Collections with custom allocator support"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"
